[package]
name = "moxie"
version = "0.1.0"
edition = "2021"
authors = ["Alex Wellnitz <moin@wellnitz-alex.de>"]
repository = "https://github.com/alexohneander/moxie"
keywords = ["pingora","ingress", "kubernetes"]
description = "Kubernetes Ingress Controller build on pingora"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = {version = "1.30.0",features = ["full"]}
kube = { version = "0.90.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["v1_24"] }
anyhow = "1.0.82"
futures = "0.3.30"
async-channel = "2.2.1"
serde = { version = "1.0.198",features = ["derive"] }
serde_json = "1.0.116"
async-trait="0.1"
pingora = { version = "0.2", features = [ "lb" ] }
url = "2.5.0"
pingora-http = "0.2.0"
pingora-core = "0.2.0"
pingora-proxy = "0.2.0"
pingora-load-balancing = "0.2.0"
structopt = "0.3.26"
